# cmaker

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile
.github/workflows/: ci.yml
benches/: CMakeLists.txt
cmake/: 3rd_party.cmake  Config.cmake  Sanitizers.cmake  global_vars.cmake
examples/: CMakeLists.txt
src/: CMakeLists.txt
src/include/lib/: lib.h
src/lib/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt
tests/lib/: lib-test.cpp
